--- a/first_apps/templates/first.html
+++ b/first_apps/templates/first.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
-    <form method="POST">
+    
+    <form method="POST" class ="form-inline">
         {% csrf_token %}
+        <div class="form-group">
         {{form.as_p}}
+        </div>
     <button type="submit">Submit</button>    
     </form>
+
 </body>
 </html>
