--- a/first_apps/templates/show_emp.html
+++ b/first_apps/templates/show_emp.html
@@ -21,15 +21,24 @@
             <td>emp name</td>
             <td>address</td>
             <td>designation</td>
+            
         </tr>
         {% for x in data %}
         <tr>
+            
             <td>{{x.cmp_name}}</td>
             <td>{{x.join_date}}</td>
             <td>{{x.emp_name}}</td>
             <td>{{x.emp_address}}</td>
             <td>{{x.designation}}</td>
-           
+            <td>{{x.id}}</td>
+           <td>
+            <a href="/delete/{{ x.id }}">Delete</a>
+            
+           </td>
+           <td>
+            <a href="/edit/{{x.id}}">Edit</a>
+           </td>
         </tr>
         {% endfor %}
     </table>
